3497 Fixed styling and js issue of hidden question.
- Fixed grey line styling not showing up on select phone and will it work for me page.
- Fixed issue around hidden question section flickering on load of will it work for me page.

Authors: @veda @yolinas

--- a/app/assets/stylesheets/elements/_helpers.scss
+++ b/app/assets/stylesheets/elements/_helpers.scss
@@ -49,3 +49,9 @@
 .js-enabled .js-hidden {
   display: none;
 }
+
+// Show grey highlighter only for hidden questions
+.hidden-question {
+  padding-left: 20px;
+  border-left: 4px solid $grey-1;
+}
